# discord_rag_bot

./: .dockerignore  .env  .gitattributes  .gitignore  .isort.cfg  .markdownlint.json  .pre-commit-config.yaml  CODE_FORMATTING_GUIDE.md  DOCKER.md  ENHANCED_RAG_CHECKLIST.md  LICENSE  Makefile  RAG_SYSTEM_GUIDE.md  RAG_TEST_COVERAGE_FINAL.md  RAG_TEST_COVERAGE_SUMMARY.md  README.md  docker-compose.yaml  env.template  prometheus.yml
backend/: .dockerignore  .env  Dockerfile  README.md  conftest.py  docker-compose.weaviate.yml  gold_index_missing.json  gold_index_suggest.json  pyproject.toml  weaviate_uids.json
backend/alembic/: env.py
backend/alembic/versions/: abe8795d1c1d_create_query_and_feedback_tables.py
backend/app/: main.py
backend/app/api/: query.py  test_db.py
backend/app/api/v1/: enhanced_rag.py  feedback.py  health.py  rag.py
backend/app/core/: config.py  enhanced_metrics.py  error_handlers.py  exceptions.py  logging.py  metrics.py  retry.py  weaviate_client.py
backend/app/db/: models.py  session.py
backend/app/models/: __init__.py  error.py  feedback.py  query.py  rag.py
backend/app/services/: enhanced_rag_service.py  feedback_service.py  rag_service.py
backend/scripts/: start.sh  validate_env.py  validate_env_skip.py
backend/tests/: test_error_handling.py  test_feedback.py  test_feedback_integration.py  test_health_endpoint.py  test_rag.py
backend/tests/services/: test_enhanced_rag_service.py  test_feedback_service.py  test_health_service.py  test_metrics_service.py  test_rag_service.py
bots/: Dockerfile  db.py  env.template  (+4 more)
rag_agent/: Dockerfile  pyproject.toml
rag_agent/core/: __init__.py  _bootstrap.py  config.py  logging.py  metrics.py  retry.py
rag_agent/data/: test_dataset.json
rag_agent/evaluation/: __init__.py  cli_eval.py  evaluator.py  metrics.py
rag_agent/evaluation_results/: cases_2025-10-06_150049Z.jsonl  cases_2025-10-06_150128Z.jsonl  cases_2025-10-06_150553Z.jsonl  cases_2025-10-06_150816Z.jsonl  cases_2025-10-06_151336Z.jsonl  cases_2025-10-06_151408Z.jsonl  evaluation_metrics.json  evaluation_v1.1_20250919_111516.json  failures_debug.jsonl  final_evaluation_summary.json  summary_2025-10-06_150049Z.json  summary_2025-10-06_150128Z.json  summary_2025-10-06_150553Z.json  summary_2025-10-06_150816Z.json  summary_2025-10-06_151336Z.json  summary_2025-10-06_151408Z.json
rag_agent/generation/: __init__.py  cli_generate.py  context_packer.py  discord_prompt_builder.py  generation_pipeline.py  llm_client.py  pipeline.py  prompt_builder.py  prompting.py
rag_agent/indexing/: embeddings.py  hybrid_indexer.py  indexing.py  indexing_pipeline.py  sqlite_fts.py  weaviate_index.py
rag_agent/ingestion/: __init__.py  chunker.py  cli_ingest.py  embedder.py  enhanced_chunker.py  loader.py  normalize.py  pipeline.py  schema.py  utils.py
rag_agent/query/: __init__.py  query_planner.py
rag_agent/retrieval/: __init__.py  dev_check.py  enhanced_retrieval.py  fuse.py  keyword.py  pipeline.py  rerank.py  reranker.py  retrieval_pipeline.py  retriever.py  vector.py  vector_store.py
rag_agent/search/: hybrid_search.py  mmr.py
rag_agent/tests/: test_advanced_features.py  test_chunk_validation.py  test_document_processing.py  test_e2e_pipeline.py  test_generation_pipeline.py  test_performance.py  test_query_planner_mixed.py  test_real_coverage.py  test_regression.py  test_retrieval_system.py  test_smoke.py  test_unit_logic.py  test_vector_operations.py
rag_agent/tuning/: bootcamp_eval_set_0001_0100.jsonl  bootcamp_eval_set_0001_0100_summary.csv  bootcamp_eval_set_correct.jsonl  bootcamp_supplement_gold_final.jsonl
(+61 files in other folders)
