[tool.poetry]
name = "rag_agent"
version = "0.1.0"
description = "RAG pipeline for Discord RAG Bot"
authors = ["Nabin Kim <nabinkim0318@gmail.com>"]
packages = [
    { include = "generation" },
    { include = "evaluation" },
    { include = "retrieval" },
    { include = "ingestion" },
    { include = "tests" }
]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
uvicorn = {extras=["standard"], version="^0.30.0"}
fastapi = "^0.112.0"
faiss-cpu = "^1.8.0"
requests = "^2.32.0"
openai = "^1.30.1"
PyMuPDF = "^1.23.0"
loguru = "^0.7.0"
prometheus-client = "^0.22.1"
prometheus-fastapi-instrumentator = "^7.1.0"
yapf = "^0.43.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^6.0.1"
flake8 = "^7.0.0"
ruff = "^0.13.3"
pre-commit = "^3.7.0"
pytest = "^8.2.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["rag_agent"]
known_third_party = ["numpy", "scikit-learn", "faiss", "requests", "openai", "fitz"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
